--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<main>
 			<header>
 				<div>
-					<img src="assets/img/baby yoda.jpg" alt="Baby Yoda">
+					<img src="assets/img/baby-yoda.jpg" alt="Baby Yoda">
 				</div>
 
 				<h1>Ya Yeet dit is niet meer van will</h1>
